IEEE function added

--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -598,34 +598,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# extraction from \"IEEE\" publication house.\n",
-    "html = gettingUrl(\"https://ieeexplore.ieee.org/document/9837920/references#references\")\n",
+    "# html = gettingUrl(\"https://ieeexplore.ieee.org/document/9837920/references#references\")\n",
     "paperLinksgoogleScholarIEEE = []\n",
-    "paperLinksgoogleScholarIEEEfinal = []\n",
+    "ieeeDOI = []\n",
+    "toGetDeets = []\n",
+    "allLastAuthors_ieee = []\n",
+    "journalName = []\n",
+    "Titles = []\n",
+    "yearPublication = []\n",
     "# creating an instance of the BeautifulSoup library\n",
     "soup = BeautifulSoup(html, 'lxml')\n",
     "tags = soup.find_all('div', class_='reference-container')\n",
     "for tag in tags:\n",
-    "    link = tag.find('a', class_=\"stats-reference-link-googleScholar\")\n",
-    "    paperLinksgoogleScholarIEEE.append(link['href'])\n",
-    "\n",
-    "initial = paperLinksgoogleScholarIEEE[0]\n",
-    "paperLinksgoogleScholarIEEEfinal.append(initial)\n",
-    "i = 1\n",
-    "while (i < len(paperLinksgoogleScholarIEEE)):\n",
-    "    if paperLinksgoogleScholarIEEE[i] != initial:\n",
-    "        paperLinksgoogleScholarIEEEfinal.append(paperLinksgoogleScholarIEEE[i])\n",
+    "    \n",
+    "    detail = tag.find('div',class_=\"col u-px-1\")\n",
+    "    fineDetail = detail.find('div')\n",
+    "    \n",
+    "    if fineDetail.find('em') == None:\n",
+    "        journalName.append(\"No Data Found\")\n",
     "    else:\n",
-    "        break\n",
-    "    i += 1\n",
+    "        journalName.append(fineDetail.find('em').text)\n",
     "\n",
-    "for link in paperLinksgoogleScholarIEEEfinal:\n",
-    "    index = paperLinksgoogleScholarIEEEfinal.index(link)\n",
-    "    print(index+1, link)\n"
+    "    Titles.append(fineDetail.text.split('\"')[-1])\n",
+    "\n",
+    "    if 'and' in fineDetail.text.split('\"')[0]:\n",
+    "        allLastAuthors_ieee.append(fineDetail.text.split('\"')[0].split('and')[-1])\n",
+    "    else:\n",
+    "        allLastAuthors_ieee.append(fineDetail.text.split('\"')[0])\n",
+    "\n",
+    "    yearPublication.append(fineDetail.text.split('\"')[-1].split('.')[-2])\n",
+    "\n",
+    "    doi = tag.find('a', class_=\"stats-reference-link-crossRef\")\n",
+    "    \n",
+    "    doi_ieee = tag.find('a', class_=\"stats-reference-link-viewArticle\")\n",
+    "\n",
+    "    if doi == None and doi_ieee == None:\n",
+    "        ieeeDOI.append(\"No DOI\")\n",
+    "    elif doi == None:\n",
+    "        ieeeDOI.append(\"https://ieeexplore.ieee.org\"+doi_ieee['href'])\n",
+    "    else:\n",
+    "        ieeeDOI.append(doi['href'])\n",
+    "\n",
+    "    gscholar = tag.find('a', class_=\"stats-reference-link-googleScholar\")\n",
+    "    if gscholar == None:\n",
+    "        paperLinksgoogleScholarIEEE.append(\"Google Scholar Link Not Found\")\n",
+    "    else:\n",
+    "        paperLinksgoogleScholarIEEE.append(gscholar['href'])\n"
    ]
   },
   {
