Cambridge function added, ACS and Elsevier left

--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -169,39 +169,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to find the publication house name of the referenced paper from google scholar.\n",
-    "\n",
-    "name = content.text\n",
-    "# print(name)\n",
-    "\n",
-    "if \"science\" in name:\n",
-    "    print(\"science\")\n",
-    "elif 'Wiley' in name:\n",
-    "    print(\"wiley\")\n",
-    "elif 'nature' in name:\n",
-    "    print(\"nature\")\n",
-    "elif 'sciencedirect' in name:\n",
-    "    print(\"sciencedirect\")\n",
-    "elif 'Springer' in name:\n",
-    "    print(\"Springer\")\n",
-    "elif 'Elsevier' in name:\n",
-    "    print(\"Elsevier\")\n",
-    "elif 'mdpi' in name:\n",
-    "    print(\"mdpi\")\n",
-    "elif 'ACS Publications' in name:\n",
-    "    print(\"ACS Publications\")\n",
-    "elif 'ieee' in name:\n",
-    "    print(\"ieee\")\n",
-    "else:\n",
-    "    print(\"other\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# finding out the publication house link of the paper from google scholar.\n",
     "paperLink = soup3.find('h3', class_='gs_rt')\n",
     "print(paperLink.a['href'])\n"
@@ -661,26 +628,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# extraction from \"Cambridge publishing house\" publication house.\n",
-    "html = gettingUrl(\"https://www.cambridge.org/core/journals/experimental-results/article/observing-nonuniform-nonluders-yielding-in-a-coldrolled-medium-manganese-steel-with-digital-image-correlation/1C8B6F3364BA54FC2C1D7801FCFDB85E\")\n",
-    "paperlinksCambridge = []\n",
+    "# html = gettingUrl(\"https://www.cambridge.org/core/journals/advances-in-archaeological-practice/article/professionalcollector-collaboration/8DB3D024A682DEC74457D6D5708B8D73\")\n",
     "paperlinksgoogleScholarCambridge = []\n",
+    "content_list = []\n",
+    "allLastAuthors_cambridge = []\n",
+    "Titles = []\n",
+    "yearPublication = []\n",
+    "journalName = []\n",
+    "cambridgeDOI = []\n",
+    "allAuthors = []\n",
     "\n",
     "# creating an instance of the BeautifulSoup library\n",
     "soup = BeautifulSoup(html, 'lxml')\n",
     "tags = soup.find('div', {'id': 'references-list'})\n",
-    "links = tags.find_all('a', class_=\"ref-link\")\n",
-    "for link in links:\n",
-    "    paperlinksCambridge.append(link['href'])\n",
-    "for link in paperlinksCambridge:\n",
-    "    if \"scholar\" in link:\n",
-    "        paperlinksgoogleScholarCambridge.append(link)\n",
-    "        index = paperlinksgoogleScholarCambridge.index(link)\n",
-    "        print(index+1, link)\n"
+    "for tag in tags:\n",
+    "    content_list.append(tag)\n",
+    "\n",
+    "content = content_list[3:]\n",
+    "refNumber = len(content)\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "for i in range(2, refNumber+2):\n",
+    "    toGetDeets = content[i-2].find('div',\n",
+    "                                   {'id': 'reference-'+\"{}\".format(i)+'-content'})\n",
+    "\n",
+    "    link = toGetDeets.find('a', class_='ref-link')\n",
+    "    links = toGetDeets.find_all('a', class_='ref-link')\n",
+    "    if link.text == \"CrossRef\":\n",
+    "        cambridgeDOI.append(link['href'])\n",
+    "    else:\n",
+    "        cambridgeDOI.append(\"No DOI\")\n",
+    "\n",
+    "    if links[-1].text == \"Google Scholar\":\n",
+    "        paperlinksgoogleScholarCambridge.append(links[-1]['href'])\n",
+    "    else:\n",
+    "        paperlinksgoogleScholarCambridge.append(\n",
+    "            \"Google Scholar Link Not Found\")\n",
+    "\n",
+    "        yearPublication.append(toGetDeets.find('span', class_='year').text)\n",
+    "\n",
+    "    if toGetDeets.find('span', class_='article-title') != None:\n",
+    "        Titles.append(toGetDeets.find('span', class_='article-title').text)\n",
+    "    else:\n",
+    "        Titles.append(\"No data found\")\n",
+    "\n",
+    "    if toGetDeets.find('span', class_='publisher-name') != None:\n",
+    "        journalName.append(toGetDeets.find(\n",
+    "            'span', class_='publisher-name').text)\n",
+    "    elif toGetDeets.find('span', class_='source') != None:\n",
+    "        journalName.append(toGetDeets.find('span', class_='source').text)\n",
+    "    else:\n",
+    "        journalName.append(\"No Data Found\")\n",
+    "\n",
+    "    # print(toGetDeets)\n",
+    "    author = toGetDeets.find_all('span', class_='string-name')\n",
+    "    allAuthors.append(author)\n",
+    "\n",
+    "for auth in allAuthors:\n",
+    "    if auth == []:\n",
+    "        allLastAuthors_cambridge.append(\"No Data Found\")\n",
+    "    elif len(auth) == 1:\n",
+    "        allLastAuthors_cambridge.append(auth[0].text)\n",
+    "    else:\n",
+    "        allLastAuthors_cambridge.append(auth[-1].text)\n",
+    "# Titles\n",
+    "# (paperlinksgoogleScholarCambridge)\n"
    ]
   },
   {
