Elsevier and Science Direct functions added

--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -382,16 +382,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022\n",
+      "2022\n",
+      "2022\n",
+      "2022\n",
+      "2022\n",
+      "2022\n",
+      "2022\n",
+      "2022\n",
+      "2022\n",
+      "2022\n",
+      "2022\n"
+     ]
+    }
+   ],
    "source": [
     "# extraction from \"Elsevier(sciencedirect)\" publication house.\n",
     "# html = gettingUrl(\"https://www.sciencedirect.com/science/article/pii/S2376060522000608\")\n",
-    "paperLinksgoogleScholarelsevier = []\n",
-    "links = []\n",
+    "paperLinksgoogleScholarscienceDirect = []\n",
     "Titles =[]\n",
-    "elsevierDOI = []\n",
+    "scienceDirectDOI = []\n",
+    "journalName = []\n",
+    "links = []\n",
+    "allLastAuthors_sciencedirect = []\n",
+    "yearPublication = []\n",
     "# creating an instance of the BeautifulSoup library\n",
     "soup = BeautifulSoup(html, 'lxml')\n",
     "tags = soup.find_all('dd', class_=\"reference\")\n",
@@ -401,35 +422,27 @@
     "i = 0\n",
     "\n",
     "for i in range(1, int(refNumber)+1):\n",
-    "    tag = soup.find('dd', {'id': 'sref'+str(i)})\n",
-    "    print(tag)\n",
+    "    tag = soup.find('dd', {'id': 'sref'+\"{}\".format(i)})\n",
+    "    Titles.append(tag.find('strong',class_=\"title\").text)\n",
+    "    journalName.append(tag.find('div',class_=\"host\").text)\n",
+    "    yearPublication.appendtag.find('div',class_=\"host\").text.split(',')[-2].split('(')[-1].split(')')[0]\n",
+    "    links = tag.find_all('a', class_=\"link\")\n",
+    "    if links[0].text == \"Article\":\n",
+    "        scienceDirectDOI.append(\"https://www.sciencedirect.com/\"+links[0]['href'])\n",
+    "    else:\n",
+    "        scienceDirectDOI.append(\"No DOI\")\n",
     "\n",
-    "\n",
+    "    if links[-1].text == \"Google Scholar\":\n",
+    "        paperLinksgoogleScholarscienceDirect.append(links[-1]['href'])\n",
+    "    else:\n",
+    "        paperLinksgoogleScholarscienceDirect.append(\"No Google Scholar Link\")\n",
     "    \n",
-    "\n",
-    "# for i in range(1,int(refNumber)+1):\n",
-    "#     tag = soup.find('dd', {'id':'sref'+str(i)})\n",
-    "#     print(tag)\n",
-    "\n",
-    "# for tag in tags:\n",
-    "#     link = (tag.find_all('a', class_=\"link\"))\n",
-    "#     for l in link:\n",
-    "#         links.append(l['href'])\n",
-    "    \n",
-    "#     doi = tag.find('a', class_=\"link\")\n",
-    "#     elsevierDOI.append(\"https://www.sciencedirect.com/\"+doi['href'])\n",
-    "    \n",
-    "\n",
-    "# for link in links:\n",
-    "#     if \"scholar\" in link:\n",
-    "#         paperLinksgoogleScholarelsevier.append(link)\n",
-    "\n",
-    "# for link in paperLinksgoogleScholarelsevier:\n",
-    "#     index = paperLinksgoogleScholarelsevier.index(link)\n",
-    "\n",
-    "# for tag in tags:\n",
-    "#     Titles.append(((tag.find(\"div\", class_=\"contribution\")).find('strong',class_='title')).text)\n",
-    "\n"
+    "    content = tag.find('div',class_=\"contribution\").text.split(',')\n",
+    "    if \"et al\" in content[-1]:\n",
+    "        allLastAuthors_sciencedirect.append(content[-2])\n",
+    "    else:\n",
+    "        allLastAuthors_sciencedirect.append(content[-1].replace(Titles[i-1],\" \"))\n",
+    "    i+=1"
    ]
   },
   {
