--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -218,6 +218,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.science.org/doi/10.1126/science.1102896\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_to_actual_url(doi_url): \n",
+    "    options = Options()\n",
+    "    options.headless = True\n",
+    "    options.add_argument(\"--proxy-server='direct://'\")\n",
+    "    options.add_argument(\"--proxy-bypass-list=*\")\n",
+    "    options.add_argument(\"--start-maximized\")\n",
+    "    options.add_argument(\"--disable-gpu\")\n",
+    "    options.add_argument('--lang=en_US')\n",
+    "    options.add_argument(\"--window-size=1920,1080\")\n",
+    "    options.add_argument(\"--ignore-certificate-errors\")\n",
+    "    options.add_argument(\"--disable-extensions\")\n",
+    "    options.add_argument(\n",
+    "        \"--user-agent=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.86 Safari/537.36\")\n",
+    "    options.add_argument(\"--no-sandbox\")\n",
+    "    options.add_argument(f\"user-agent=[userAgent]\")\n",
+    "    options.add_argument(\"--disable-dev-shm-usage\")\n",
+    "\n",
+    "    driver = webdriver.Chrome(service=Service(\n",
+    "        ChromeDriverManager().install()), options=options)\n",
+    "    driver.get(doi_url)\n",
+    "\n",
+    "    time.sleep(5)\n",
+    "\n",
+    "    return driver.current_url\n",
+    "\n",
+    "print(convert_to_actual_url(\"https://doi.org/10.1126/science.1102896\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -991,7 +1033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
